consul-cel/enforce-min-tls-version/.kyverno-test/kyverno-test.yaml
apiVersion: cli.kyverno.io/v1alpha1
kind: Test
metadata:
  name: enforce-min-tls-version
policies:
- ../enforce-min-tls-version.yaml
resources:
- resource.yaml
results:
- kind: Mesh
  policy: enforce-min-tls-version
  resources:
  - badmesh
  result: fail
  rule: check-for-tls-version
- kind: Mesh
  policy: enforce-min-tls-version
  resources:
  - goodmesh
  result: pass
  rule: check-for-tls-version
